# operation-transport-geometry

./: .gitignore  FINAL_VALIDATION.md  MANIFEST.in  README.md  pyproject.toml
benchmarks/: __init__.py  cli.py  methods.py  metrics.py  plots.py  registry.py  report.py  runner.py  shared.py  types.py
benchmarks/papers/: README.md  __init__.py  base.py  group_dro.py  irm.py  mlot.py  otg.py  spo.py  srw.py  toalign.py
configs/: default.yaml
configs/suites/: diagnostics_suite.yaml  final_validation.yaml  full_suite.yaml  literature_benchmark.yaml  risk_suite.yaml  transport_suite.yaml
configs/worlds/: admissibility_stress.yaml  harmful_boundary.yaml  (+7 more)
docs/: USAGE.md
examples/: custom_world_template.py  minimal_run.py
notes/: admissible_transport_layer.md  diagnostics_reporting_layer.md  domain_pair_adaptive_cost.md  final_adaptive_node_sensitive_otg.md  graph_tensor_benchmark.md  module_contracts.md  pass1_architecture.md  pass6_validation_and_polish.md  proposal_implementation_mapping.md  risk_learning_layer.md
otg/: __main__.py  cli.py  experiments.py
scripts/: doctor.sh  sanity.sh  validate.sh
tests/: test_benchmark_suite.py  test_costs.py  test_dag.py  test_domain_pair_adaptive_cost.py  test_final_adaptive_node_sensitive_otg.py  test_graph_pipeline.py  test_modes.py  test_pass2_worlds.py  test_pass3_risks.py  test_pass4_pipeline.py  test_pass4_transport.py  test_pass5_reporting.py  test_pass5_suite.py  test_pass6_cli.py  test_pass6_experiments_compat.py  test_pass6_presets.py  test_pass6_reproducibility.py  test_pipeline.py  test_transport_lp.py
(+51 files in other folders)
