[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "otg-testbed"
version = "1.0.0"
description = "Mathematical testbed for Operational Transport Geometry"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.23",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "pyyaml>=6.0",
    "scikit-learn>=1.2"
]

[project.optional-dependencies]
pot = ["POT>=0.9.3"]
torch = ["torch>=2.0"]
dev = ["pytest>=7.0"]

[project.scripts]
otg = "otg.cli:main"
otg-benchmark = "benchmarks.cli:main"

[tool.setuptools.packages.find]
include = ["otg*", "benchmarks*"]
